Testing TimeUtils